fix group chat spacing overriding single chat

--- a/css/friends/chat.css
+++ b/css/friends/chat.css
@@ -2057,9 +2057,9 @@ body:not(.WindowFocus) .inviteAnotherFriendButton {
   right: 0px !important;
 }
 
-.ChatRoomGroupDialog_history {
+.chatWindow:has(.chatRoomGroupNavColumn) .ChatRoomGroupDialog_history {
   margin-left: 200px !important;
-  transition: margin 0.2s ease-in-out, width: 0.2s ease-in-out !important;
+  transition: margin 0.2s ease-in-out, width 0.2s ease-in-out !important;
 }
 
 .ChatRoomGroupDialog_contents:has(.chatRoomGroupNavCollapsed) .ChatRoomGroupDialog_history {
